<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomePageActivity" >

    <EditText
        android:id="@+id/log_in_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_in_head"
        android:layout_marginTop="18dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/log_in_email_tf" />

    <requestFocus />

    <EditText
        android:id="@+id/log_in_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_in_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/log_in_pass_tf" >
    </EditText>

    <TextView
        android:id="@+id/log_in_head"
        style="@style/MyTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/log_in_head_text" />

    <Button
        android:id="@+id/button1"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_back"
        android:text="@string/log_in_button_text"
        android:textColor="#fff"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button1"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="35dp"
            android:text="@string/reset_pass_text"
            android:textColor="#999999"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:text="@string/reset_pass_linc"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>